# animatedrap

./: .pre-commit-config.yaml  README.md  animatedrat.py  pyproject.toml
.github/workflows/: main.yaml
animdrap/: __init__.py  _animdrap.py  animdrap.py  purge_drap.py
